--- a/config/sync/core.entity_view_display.node.article.slider.yml
+++ b/config/sync/core.entity_view_display.node.article.slider.yml
@@ -5,13 +5,21 @@ dependencies:
   config:
     - core.entity_view_mode.node.slider
     - field.field.node.article.body
+    - field.field.node.article.field_author
     - field.field.node.article.field_category
+    - field.field.node.article.field_comments
+    - field.field.node.article.field_favorite_news
+    - field.field.node.article.field_featured_on_slider
     - field.field.node.article.field_image
     - field.field.node.article.field_is_video
+    - field.field.node.article.field_meta_tags
+    - field.field.node.article.field_published_date
+    - field.field.node.article.field_show_internal_image
     - field.field.node.article.field_tags
     - field.field.node.article.field_video_url
     - node.type.article
   module:
+    - datetime
     - image
     - text
     - user
@@ -24,12 +32,12 @@ content:
   body:
     label: above
     type: text_default
-    weight: 2
+    weight: 1
     settings: {  }
     third_party_settings: {  }
     region: content
   field_category:
-    weight: 6
+    weight: 5
     label: above
     settings:
       link: true
@@ -38,7 +46,7 @@ content:
     region: content
   field_image:
     type: image
-    weight: 3
+    weight: 2
     region: content
     label: above
     settings:
@@ -47,7 +55,7 @@ content:
     third_party_settings: {  }
   field_is_video:
     type: boolean
-    weight: 4
+    weight: 3
     region: content
     label: above
     settings:
@@ -55,8 +63,17 @@ content:
       format_custom_false: ''
       format_custom_true: ''
     third_party_settings: {  }
-  field_tags:
+  field_published_date:
+    type: datetime_default
     weight: 7
+    region: content
+    label: hidden
+    settings:
+      timezone_override: ''
+      format_type: article_short
+    third_party_settings: {  }
+  field_tags:
+    weight: 6
     label: above
     settings:
       link: true
@@ -65,7 +82,7 @@ content:
     region: content
   field_video_url:
     type: video_embed_field_video
-    weight: 5
+    weight: 4
     region: content
     label: above
     settings:
@@ -83,6 +100,8 @@ hidden:
   field_author: true
   field_comments: true
   field_favorite_news: true
+  field_featured_on_slider: true
+  field_meta_tags: true
   field_show_internal_image: true
   langcode: true
   search_api_excerpt: true
