--- a/config/sync/core.entity_view_display.node.article.teaser.yml
+++ b/config/sync/core.entity_view_display.node.article.teaser.yml
@@ -5,13 +5,21 @@ dependencies:
   config:
     - core.entity_view_mode.node.teaser
     - field.field.node.article.body
+    - field.field.node.article.field_author
     - field.field.node.article.field_category
+    - field.field.node.article.field_comments
+    - field.field.node.article.field_favorite_news
+    - field.field.node.article.field_featured_on_slider
     - field.field.node.article.field_image
     - field.field.node.article.field_is_video
+    - field.field.node.article.field_meta_tags
+    - field.field.node.article.field_published_date
+    - field.field.node.article.field_show_internal_image
     - field.field.node.article.field_tags
     - field.field.node.article.field_video_url
     - node.type.article
   module:
+    - datetime
     - image
     - taxonomy
     - user
@@ -47,6 +55,15 @@ content:
       format_custom_false: ''
       format_custom_true: ''
     third_party_settings: {  }
+  field_published_date:
+    type: datetime_default
+    weight: 4
+    region: content
+    label: hidden
+    settings:
+      timezone_override: ''
+      format_type: article_short
+    third_party_settings: {  }
   field_tags:
     type: entity_reference_rss_category
     weight: 2
@@ -59,6 +76,8 @@ hidden:
   field_author: true
   field_comments: true
   field_favorite_news: true
+  field_featured_on_slider: true
+  field_meta_tags: true
   field_show_internal_image: true
   field_video_url: true
   langcode: true
