--- a/config/sync/views.view.news.yml
+++ b/config/sync/views.view.news.yml
@@ -10,6 +10,7 @@ dependencies:
     - node.type.article
   module:
     - better_exposed_filters
+    - datetime
     - image
     - node
     - taxonomy
@@ -935,6 +936,37 @@ display:
       display_extenders: {  }
       path: news
       exposed_block: false
+      sorts:
+        field_published_date_value:
+          id: field_published_date_value
+          table: node__field_published_date
+          field: field_published_date_value
+          relationship: none
+          group_type: group
+          admin_label: ''
+          order: DESC
+          exposed: false
+          expose:
+            label: ''
+          granularity: second
+          plugin_id: datetime
+        created:
+          id: created
+          table: node_field_data
+          field: created
+          order: DESC
+          entity_type: node
+          entity_field: created
+          plugin_id: date
+          relationship: none
+          group_type: group
+          admin_label: ''
+          exposed: false
+          expose:
+            label: ''
+          granularity: second
+      defaults:
+        sorts: false
     cache_metadata:
       max-age: -1
       contexts:
