--- a/config/sync/views.view.regular_donations.yml
+++ b/config/sync/views.view.regular_donations.yml
@@ -576,7 +576,7 @@ display:
     position: 1
     display_options:
       display_extenders: {  }
-      path: regular-donations
+      path: admin/regular-donations
     cache_metadata:
       max-age: -1
       contexts:
