--- a/config/sync/views.view.ged_transaction.yml
+++ b/config/sync/views.view.ged_transaction.yml
@@ -1604,7 +1604,7 @@ display:
           tags:
             previous: '‹ წინა'
             next: 'შემდეგი ›'
-            first: '« First'
+            first: '1'
             last: 'Last »'
           expose:
             items_per_page: false
