--- a/web/modules/custom/girchi_donations/girchi_donations.links.menu.yml
+++ b/web/modules/custom/girchi_donations/girchi_donations.links.menu.yml
@@ -9,3 +9,10 @@ regular_donation.admin.structure.settings:
   description: 'Configure Regular donation entities'
   route_name: regular_donation.settings
   parent: system.admin_structure
+
+regular_donation.account:
+  title: 'Regular donations'
+  description: ''
+  route_name: girchi_donations.regular_donations
+  menu_name: account
+  parent: account
