#540 Change regular donation weight.

--- a/web/modules/custom/girchi_donations/girchi_donations.links.menu.yml
+++ b/web/modules/custom/girchi_donations/girchi_donations.links.menu.yml
@@ -16,3 +16,4 @@ regular_donation.account:
   route_name: girchi_donations.regular_donations
   menu_name: account
   parent: account
+  weight: -46
