Update view config.

--- a/config/sync/views.view.donations.yml
+++ b/config/sync/views.view.donations.yml
@@ -1387,9 +1387,9 @@ display:
           click_sort_column: value
           type: boolean
           settings:
-            format: default
-            format_custom_true: ''
-            format_custom_false: ''
+            format: custom
+            format_custom_true: Regular
+            format_custom_false: Disposable
           group_column: value
           group_columns: {  }
           group_rows: true
