#540 Add donations view link to user menu.

--- a/web/modules/custom/girchi_donations/girchi_donations.links.menu.yml
+++ b/web/modules/custom/girchi_donations/girchi_donations.links.menu.yml
@@ -17,3 +17,11 @@ regular_donation.account:
   menu_name: account
   parent: account
   weight: -46
+
+donations.account:
+  title: 'Donations'
+  description: ''
+  route_name: view.donations.page_2
+  menu_name: account
+  parent: account
+  weight: -47 
