#444 Fix regular donations text and translations.

--- a/web/modules/custom/girchi_donations/girchi_donations.links.menu.yml
+++ b/web/modules/custom/girchi_donations/girchi_donations.links.menu.yml
@@ -11,7 +11,7 @@ regular_donation.admin.structure.settings:
   parent: system.admin_structure
 
 regular_donation.account:
-  title: 'Regular donations'
+  title: 'Regular donation settings'
   description: ''
   route_name: girchi_donations.regular_donations
   menu_name: account
@@ -19,7 +19,7 @@ regular_donation.account:
   weight: -46
 
 donations.account:
-  title: 'Donations'
+  title: 'Donations history'
   description: ''
   route_name: view.donations.page_2
   menu_name: account
