Revert "Revert "Merge branch 'dev' into 498-transactions-history-in-users-profile""
This reverts commit 2c9e5bf278f6271caff6acb1aa64ca6c7fa611b0.

--- a/config/sync/core.menu.static_menu_link_overrides.yml
+++ b/config/sync/core.menu.static_menu_link_overrides.yml
@@ -1,10 +1,10 @@
 definitions:
   contact__site_page:
-    weight: -50
+    enabled: false
     menu_name: footer
     parent: ''
-    enabled: true
     expanded: false
+    weight: -50
   node__add_page:
     weight: 1
     menu_name: admin
@@ -132,7 +132,7 @@ definitions:
     enabled: true
     expanded: false
   user__logout:
-    weight: -42
+    weight: -43
     menu_name: account
     parent: ''
     enabled: true
