--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -25,7 +25,6 @@ module:
   ctools: 0
   datetime: 0
   dblog: 0
-  devel: 0
   devel_entity_updates: 0
   drush_language: 0
   dynamic_page_cache: 0
@@ -92,6 +91,7 @@ module:
   search_api_db: 0
   sendgrid_integration: 0
   serialization: 0
+  share_everywhere: 0
   shortcut: 0
   simple_sitemap: 0
   social_api: 0
