--- a/composer.json
+++ b/composer.json
@@ -235,6 +235,7 @@
     "drupal/hierarchical_term_formatter": "^1.0@beta",
     "drupal/image_formatter_link_to_image_style": "^1.0",
     "drupal/inline_entity_form": "^1.0@beta",
+    "drupal/international_phone": "^1.0",
     "drupal/jquery_colorpicker": "^1.3",
     "drupal/linkit": "^4.3",
     "drupal/mailchimp": "^1.7",
