--- a/config/sync/core.entity_view_display.regular_donation.regular_donation.default.yml
+++ b/config/sync/core.entity_view_display.regular_donation.regular_donation.default.yml
@@ -3,6 +3,7 @@ langcode: ka
 status: true
 dependencies:
   config:
+    - field.field.regular_donation.regular_donation.field_credit_card
     - field.field.regular_donation.regular_donation.field_donations
   module:
     - datetime
@@ -20,6 +21,14 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
+  field_credit_card:
+    weight: 16
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
   field_donations:
     weight: 15
     label: above
