--- a/config/sync/core.entity_form_display.user.user.default.yml
+++ b/config/sync/core.entity_form_display.user.user.default.yml
@@ -36,7 +36,6 @@ dependencies:
     - international_phone
     - path
     - reference_value_pair
-    - telephone
     - text
     - user
     - video_embed_field
@@ -61,7 +60,7 @@ content:
     type: string_textfield
     region: content
   field_bio:
-    weight: 30
+    weight: 23
     settings:
       rows: 5
       placeholder: ''
@@ -69,7 +68,7 @@ content:
     type: text_textarea
     region: content
   field_cover_photo:
-    weight: 17
+    weight: 16
     settings:
       progress_indicator: throbber
       preview_image_style: thumbnail
@@ -83,7 +82,7 @@ content:
     type: datetime_default
     region: content
   field_facebook_url:
-    weight: 25
+    weight: 20
     settings:
       size: 60
       placeholder: ''
@@ -91,7 +90,7 @@ content:
     type: string_textfield
     region: content
   field_favorite_news:
-    weight: 18
+    weight: 17
     settings:
       match_operator: CONTAINS
       size: 60
@@ -115,7 +114,7 @@ content:
     type: number
     region: content
   field_intro:
-    weight: 29
+    weight: 22
     settings:
       rows: 5
       placeholder: ''
@@ -149,15 +148,8 @@ content:
     third_party_settings: {  }
     type: string_textfield
     region: content
-  field_phone:
-    weight: 4
-    settings:
-      placeholder: ''
-    third_party_settings: {  }
-    type: telephone_default
-    region: content
   field_political_ged:
-    weight: 16
+    weight: 15
     settings:
       size: 60
       placeholder: ''
@@ -172,13 +164,13 @@ content:
     type: boolean_checkbox
     region: content
   field_profile_video:
-    weight: 28
+    weight: 21
     settings: {  }
     third_party_settings: {  }
     type: video_embed_field_textfield
     region: content
   field_public_email:
-    weight: 23
+    weight: 18
     settings:
       size: 60
       placeholder: ''
@@ -210,13 +202,13 @@ content:
     type: string_textarea
     region: content
   field_tel:
-    weight: 31
+    weight: 4
     settings: {  }
     third_party_settings: {  }
     type: InternationalPhoneDefaultWidget
     region: content
   field_twitter_url:
-    weight: 24
+    weight: 19
     settings:
       size: 60
       placeholder: ''
@@ -242,6 +234,7 @@ content:
     third_party_settings: {  }
 hidden:
   contact: true
+  field_phone: true
   field_rank: true
   field_social_auth_password: true
   google_analytics: true
