--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -25,6 +25,8 @@ module:
   ctools: 0
   datetime: 0
   dblog: 0
+  devel: 0
+  devel_entity_updates: 0
   drush_language: 0
   dynamic_page_cache: 0
   editor: 0
