--- a/web/themes/custom/girchi/girchi.libraries.yml
+++ b/web/themes/custom/girchi/girchi.libraries.yml
@@ -15,7 +15,7 @@ myparty-list:
     js/mypartylist.js: {}
 
 donation:
-  version: 1.1
+  version: 1.x
   js:
     js/donation.js: {}
   dependencies:
