Delete field from site settings.

--- a/config/sync/om_site_settings.site_settings.yml
+++ b/config/sync/om_site_settings.site_settings.yml
@@ -14,8 +14,8 @@ social_media_twitter: 'https://twitter.com/GirchiParty'
 social_media_instagram: ''
 social_media_youtube: 'https://www.youtube.com/channel/UC6o6176a756vk1nZuzAXy5g'
 politician_checkbox_text:
-  value: "<h6 class=\"text-uppercase font-weight-bold my-4\">რას ნიშნავს “მინდა პოლიტიკოსობა”?</h6>\r\n\r\n<div>\r\n<div>ამ ღილაკზე თითის დაჭერით, თქვენ რეგისტრირდებით როგორც პოლიტიკოსი, რომელიც საუბრობს გირჩის სახელით.</div>\r\n\r\n<div>\r\n<p>რეგისტრაციის შემდგომ, თქვენ შეგიძლიათ დაგეგმოთ თქვენი პროფესიული პოლიტიკური კარიერა.</p>\r\n\r\n<p>იმისთვის, რომ თქვენ გახდეთ პოლიტიკოსი, აუცილებელია ამ ღილაკზე დაწკაპუნებით დაეთანხმოთ პლატფორმის ორ მთავარ პოსტულატს:<br />\r\n1.&nbsp;&nbsp; &nbsp;ადამიანს ეკუთვნის საკუთარი სხეული.<br />\r\n2.&nbsp;&nbsp; &nbsp;ძალადობა და მისი მხარდაჭერა დაუშვებელია.</p>\r\n\r\n<p>თუ ამის გულწრფელად გჯერათ, კეთილი იყოს თქვენი მობრძანება, გირჩის თავისუფალ საზოგადოებაში.</p>\r\n</div>\r\n</div>\r\n"
-  format: full_html
+  value: "<h6>რას ნიშნავს “მინდა პოლიტიკოსობა”?</h6>\r\n\r\n<div>\r\n<div>ამ ღილაკზე თითის დაჭერით, თქვენ რეგისტრირდებით როგორც პოლიტიკოსი, რომელიც საუბრობს გირჩის სახელით.</div>\r\n\r\n<div>\r\n<p>რეგისტრაციის შემდგომ, თქვენ შეგიძლიათ დაგეგმოთ თქვენი პროფესიული პოლიტიკური კარიერა.</p>\r\n\r\n<p>იმისთვის, რომ თქვენ გახდეთ პოლიტიკოსი, აუცილებელია ამ ღილაკზე დაწკაპუნებით დაეთანხმოთ პლატფორმის ორ მთავარ პოსტულატს:<br />\r\n1.&nbsp;&nbsp; &nbsp;ადამიანს ეკუთვნის საკუთარი სხეული.<br />\r\n2.&nbsp;&nbsp; &nbsp;ძალადობა და მისი მხარდაჭერა დაუშვებელია.</p>\r\n\r\n<p>თუ ამის გულწრფელად გჯერათ, კეთილი იყოს თქვენი მობრძანება, გირჩის თავისუფალ საზოგადოებაში.</p>\r\n</div>\r\n</div>\r\n"
+  format: basic_html
 ui_config: 0
 enable_user_ui: 1
 copyright_text: 'ყველა საავტორო უფლების თავზეც გავიარეთ. გირჩი'
