--- a/config/sync/views.view.ged_transaction.yml
+++ b/config/sync/views.view.ged_transaction.yml
@@ -115,7 +115,7 @@ display:
             Description: Description
           info:
             created:
-              sortable: false
+              sortable: true
               default_sort_order: asc
               align: ''
               separator: ''
@@ -775,7 +775,14 @@ display:
           entity_type: taxonomy_term
           entity_field: tid
           plugin_id: taxonomy_index_tid
-      sorts: {  }
+      sorts:
+        created:
+          id: created
+          table: ged_transaction_field_data
+          field: created
+          entity_type: ged_transaction
+          entity_field: created
+          plugin_id: date
       title: 'Ged Transaction'
       header: {  }
       footer: {  }
@@ -990,6 +997,7 @@ display:
         filter_groups: false
         empty: false
         pager: false
+        sorts: false
       fields:
         created:
           id: created
@@ -1615,6 +1623,22 @@ display:
             offset: false
             offset_label: Offset
           quantity: 4
+      sorts:
+        created:
+          id: created
+          table: ged_transaction_field_data
+          field: created
+          relationship: none
+          group_type: group
+          admin_label: ''
+          order: DESC
+          exposed: false
+          expose:
+            label: ''
+          granularity: second
+          entity_type: ged_transaction
+          entity_field: created
+          plugin_id: date
     cache_metadata:
       max-age: -1
       contexts:
