--- a/config/sync/views.view.ged_transaction.yml
+++ b/config/sync/views.view.ged_transaction.yml
@@ -966,6 +966,21 @@ display:
           quantity: 9
       defaults:
         pager: false
+        header: false
+      header:
+        area:
+          id: area
+          table: views
+          field: area
+          relationship: none
+          group_type: group
+          admin_label: ''
+          empty: false
+          tokenize: false
+          content:
+            value: '<a href="/admin/content/ged_transaction/add" class="button button-action button--primary button--small" data-drupal-link-system-path="admin/content/ged_transaction/add">ახალი ტრანზაქცია </a>'
+            format: basic_html
+          plugin_id: text
     cache_metadata:
       max-age: -1
       contexts:
