--- a/web/modules/custom/girchi_referral/girchi_referral.services.yml
+++ b/web/modules/custom/girchi_referral/girchi_referral.services.yml
@@ -2,3 +2,10 @@ services:
   girchi_referral.get_user_referrals:
     class: Drupal\girchi_referral\GetUserReferralsService
     arguments: ['@entity_type.manager']
+  girchi_referral.event_subscriber:
+    class: Drupal\girchi_referral\EventSubscriber\DonationSubscriber
+    tags:
+      - { name: 'event_subscriber' }
+  girchi_referral.create_referral_transaction:
+    class: Drupal\girchi_referral\CreateReferralTransactionService
+    arguments: ['@entity_type.manager']
