--- a/config/sync/core.entity_form_display.user.user.default.yml
+++ b/config/sync/core.entity_form_display.user.user.default.yml
@@ -23,6 +23,7 @@ dependencies:
     - field.field.user.user.field_rank
     - field.field.user.user.field_rating_in_party_list
     - field.field.user.user.field_referral
+    - field.field.user.user.field_referral_benefits
     - field.field.user.user.field_referral_url
     - field.field.user.user.field_social_auth_password
     - field.field.user.user.field_tel
@@ -236,6 +237,7 @@ hidden:
   contact: true
   field_phone: true
   field_rank: true
+  field_referral_benefits: true
   field_social_auth_password: true
   google_analytics: true
   langcode: true
