--- a/config/sync/core.entity_form_display.user.user.default.yml
+++ b/config/sync/core.entity_form_display.user.user.default.yml
@@ -195,12 +195,6 @@ content:
     third_party_settings: {  }
     type: entity_reference_autocomplete
     region: content
-  field_referral_date:
-    type: datetime_default
-    weight: 24
-    region: content
-    settings: {  }
-    third_party_settings: {  }
   field_referral_url:
     weight: 14
     settings:
@@ -245,6 +239,7 @@ hidden:
   field_phone: true
   field_rank: true
   field_referral_benefits: true
+  field_referral_date: true
   field_social_auth_password: true
   google_analytics: true
   langcode: true
