--- a/config/sync/views.view.referral_autocomplete.yml
+++ b/config/sync/views.view.referral_autocomplete.yml
@@ -537,7 +537,46 @@ display:
           entity_type: user
           entity_field: mail
           plugin_id: field
-      filters: {  }
+      filters:
+        uuid:
+          id: uuid
+          table: users
+          field: uuid
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: '!='
+          value: '[current-user:uid]'
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            placeholder: ''
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          entity_type: user
+          entity_field: uuid
+          plugin_id: string
       sorts: {  }
       header: {  }
       footer: {  }
